Updated HTML / CSS to follow criteria, added classwork examples, added github / linkedin links on footer.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,61 @@
                 </div>
             </section>
 
+            <section class="section-padding pb-0" id="about">
+                <div class="container mb-5 pb-lg-5">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="mb-3" data-aos="fade-up">Class Work</h2>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5">
+                            <p class="me-4" data-aos="fade-up" data-aos-delay="300">Enrolling in the UNH bootcamp has taught me a lot so far.</a> Throughout all the triumphs and struggles with homework and group projects, I do have assignments I am incredibly proud of!</p>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
+                            <p data-aos="fade-up" data-aos-delay="500">I've come a long way from the start of not knowing any code at all, so to see the following projects and how they function is something i'm incredibly happy with!</p>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+            <section class="container">
+                <div class="col-lg-6 col-12">
+                    <div class="portfolio-thumb mb-4">
+                        <a href="assets/images/group-project-image-1.jpg" class="image">
+                            <img src="assets/images/group-project-image-1.jpg" alt="image-of-project" class="img-fluid protfolio-image">
+                        </a>
+
+                        <div class="portfolio-info">
+                            <h3 class="mb-0 portfolio-title">First Group Project "NATGO"</h3>
+                            <hr>
+                                <p class="">GitHub URL: <a href="https://github.com/603collective/group-project-1">https://github.com/603collective/group-project-1</a></p>
+                                <p class="">Deployment URL: <a href="https://603collective.github.io/group-project-1/">https://603collective.github.io/group-project-1/</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="container">
+                <div class="col-lg-6 col-12">
+                    <div class="portfolio-thumb mt-5 mt-lg-0 mb-4">
+                        <a href="assets/images/password-generator-hw.jpg" class="image">
+                            <img src="assets/images/password-generator-hw.jpg" class="img-fluid portfolio-image" alt="">
+                        </a>
+
+                        <div class="portfolio-info">                     
+                            <h3 class="portfolio-title mb-0">Password Generator</h3>
+                            <hr>
+                                <p class="">GitHub URL: <a href="https://github.com/SpencerDBrown/03-week-homework">https://github.com/SpencerDBrown/03-week-homework</a></p>
+                                <p class="">Deployment URL: <a href="https://spencerdbrown.github.io/03-week-homework/">https://spencerdbrown.github.io/03-week-homework/</a></p>
+                        </div>
+                    </div> 
+                </div>
+            </section>
+
+            
+
             <section class="section-padding">
                 <div class="container">
                     <div class="row">
@@ -141,7 +196,10 @@
                             <i class="bi-geo-alt-fill me-2 mb-4"></i>
                             Dover, New Hampshire USA
                         </h5>
-
+                        <hr>
+                        <h5>Contact Links</h5>
+                        <a href='https://github.com/SpencerDBrown'>GitHub</a>
+                        <a href='https://'>LinkedIn</a>
                         <a href="" class="custome-link mt-3 mb-5">
                             buisness@email.com
                         </a>
